vlib/v/checker/tests/fixed_array_init_with_default.vv
struct Foo {
	stack_arr [2]string
}

fn main() {
	_ := Foo{[2]string{init: ['a', 'b']}}
	_ := Foo{[2]string{init: 2.2}}
	_ := Foo{[2]string{init: 22}}
	_ := Foo{[2]string{init: true}}
}
